# fun

./: CMakeLists.txt  Makefile  README.md  run.sh
include/: image_processing.h
src/: image_processing.cu  main.cu
